--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish to gh-pages
 on:
   push:
     branches:
-      - master
+      - develop
 
 jobs:
   build:
@@ -27,5 +27,4 @@ jobs:
       env:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BASE_BRANCH: master
-        BRANCH: gh-pages
-        FOLDER: public
+        BRANCH: master
