--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-source-filesystem": "^2.1.46",
     "prism-react-renderer": "^1.0.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-utterances": "^0.6.4"
   }
 }
