--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdx-js/mdx": "^1.5.3",
     "@mdx-js/react": "^1.5.3",
     "gatsby": "^2.18.21",
+    "gatsby-plugin-feed": "^2.3.26",
     "gatsby-plugin-mdx": "^1.0.67",
     "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-remark-images": "^3.1.42",
